unpackaged/objects/Lecture__c.object
<CustomObject>
  <fields>
    <fullName>Abstract__c</fullName>
    <label>Abstract</label>
    <length>32768</length>
    <type>Html</type>
  </fields>
  <fields>
    <fullName>Internal_Lecture__c</fullName>
    <description>Sets the lecture to be Internal if the related speaker is an internal contact</description>
    <formula>IF( Speaker__r.Internal_Contact__c = TRUE, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sets the lecture to be Internal if the related speaker is an internal contact</inlineHelpText>
    <label>Internal Lecture</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Language__c</fullName>
    <label>Language</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>Chinese</fullName>
        </value>
        <value>
          <fullName>Danish</fullName>
        </value>
        <value>
          <fullName>Dutch</fullName>
        </value>
        <value>
          <fullName>English</fullName>
        </value>
        <value>
          <fullName>Finnish</fullName>
        </value>
        <value>
          <fullName>French</fullName>
        </value>
        <value>
          <fullName>German</fullName>
        </value>
        <value>
          <fullName>Italian</fullName>
        </value>
        <value>
          <fullName>Japanese</fullName>
        </value>
        <value>
          <fullName>Norwegian</fullName>
        </value>
        <value>
          <fullName>Polish</fullName>
        </value>
        <value>
          <fullName>Portugese</fullName>
        </value>
        <value>
          <fullName>Russian</fullName>
        </value>
        <value>
          <fullName>Spanish</fullName>
        </value>
        <value>
          <fullName>Swedish</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Lecture_Abstract__c</fullName>
    <label>Lecture Abstract</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Lecture_Library__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Previously named "Standard Lecture"</inlineHelpText>
    <label>Lecture Library</label>
    <lookupFilter>
      <active>true</active>
      <filterItems>
        <field>Lecture__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Lecture Library</value>
      </filterItems>
      <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Lecture__c</referenceTo>
    <relationshipLabel>Speaker Lecture information</relationshipLabel>
    <relationshipName>Lectures</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Lecture_Type__c</fullName>
    <label>Lecture Type</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>In-house</fullName>
        </value>
        <value>
          <fullName>Local Lecturer</fullName>
        </value>
        <value>
          <fullName>External Lecturer</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Length_Unit__c</fullName>
    <label>Length Unit</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>minutes</fullName>
        </value>
        <value>
          <fullName>hour(s)</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Length__c</fullName>
    <label>Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Speaker_Biography__c</fullName>
    <label>Speaker Biography</label>
    <length>1500</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Speaker_Profession__c</fullName>
    <formula>text(Speaker__r.Profession__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Speaker Profession</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Speaker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Speaker</label>
    <lookupFilter>
      <active>true</active>
      <filterItems>
        <field>Contact.Speaker__c</field>
        <operation>equals</operation>
        <value>True</value>
      </filterItems>
      <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Lectures</relationshipLabel>
    <relationshipName>Speaker_Lectures</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Speaker_text__c</fullName>
    <description>User solely for enhanced lookup search</description>
    <inlineHelpText>User solely for enhanced lookup search</inlineHelpText>
    <label>Speaker (text)</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Standard_Lecture_Lenght__c</fullName>
    <label>Standard Lecture Lenght</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Standard_Lecture_Length_Unit__c</fullName>
    <label>Standard Lecture Length Unit</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>minutes</fullName>
        </value>
        <value>
          <fullName>hours</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <label>Lecture</label>
  <listViews>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Speaker__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Language__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
  </listViews>
  <listViews>
    <fullName>HQ_Lecture_Libraries</fullName>
    <columns>NAME</columns>
    <columns>Speaker__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>RECORDTYPE</field>
      <operation>equals</operation>
      <value>Lecture__c.Lecture_Library</value>
    </filters>
    <filters>
      <field>OWNER.FIRST_NAME</field>
      <operation>notEqual</operation>
      <value>alexis</value>
    </filters>
    <label>HQ: Lecture Libraries</label>
    <language>en_US</language>
  </listViews>
  <listViews>
    <fullName>Lectures_in_English</fullName>
    <columns>NAME</columns>
    <columns>Language__c</columns>
    <columns>Length__c</columns>
    <columns>Length_Unit__c</columns>
    <columns>Speaker__c</columns>
    <columns>Lecture_Library__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>Language__c</field>
      <operation>includes</operation>
      <value>English</value>
    </filters>
    <label>Lectures in English</label>
    <language>en_US</language>
  </listViews>
  <listViews>
    <fullName>Lectures_in_German</fullName>
    <columns>NAME</columns>
    <columns>Language__c</columns>
    <columns>Length__c</columns>
    <columns>Length_Unit__c</columns>
    <columns>Speaker__c</columns>
    <columns>Lecture_Library__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>Language__c</field>
      <operation>includes</operation>
      <value>German</value>
    </filters>
    <label>Lectures in German</label>
    <language>en_US</language>
  </listViews>
  <listViews>
    <fullName>X2_All_Lectures_In_house</fullName>
    <columns>NAME</columns>
    <columns>Speaker__c</columns>
    <columns>Language__c</columns>
    <columns>Abstract__c</columns>
    <columns>Standard_Lecture_Lenght__c</columns>
    <columns>Standard_Lecture_Length_Unit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>Internal_Lecture__c</field>
      <operation>equals</operation>
      <value>1</value>
    </filters>
    <filters>
      <field>RECORDTYPE</field>
      <operation>equals</operation>
      <value>Lecture__c.Speaker_Lecture</value>
    </filters>
    <label>2. All Speaker lectures - Internal</label>
    <language>en_US</language>
    <sharedTo />
  </listViews>
  <listViews>
    <fullName>X3_All_Lectures_In_house</fullName>
    <columns>NAME</columns>
    <columns>Speaker__c</columns>
    <columns>Lecture_Library__c</columns>
    <columns>Abstract__c</columns>
    <columns>Standard_Lecture_Lenght__c</columns>
    <columns>Standard_Lecture_Length_Unit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>Internal_Lecture__c</field>
      <operation>equals</operation>
      <value>0</value>
    </filters>
    <filters>
      <field>RECORDTYPE</field>
      <operation>equals</operation>
      <value>Lecture__c.Speaker_Lecture</value>
    </filters>
    <label>3. All Speaker Lectures - External</label>
    <language>en_US</language>
    <sharedTo />
  </listViews>
  <nameField>
    <label>Lecture Title</label>
    <type>Text</type>
  </nameField>
  <pluralLabel>Lectures</pluralLabel>
  <recordTypes>
    <active>true</active>
    <description>Changed name from "Standard Lecture"</description>
    <fullName>Lecture_Library</fullName>
    <label>Lecture Library</label>
  </recordTypes>
  <recordTypes>
    <active>true</active>
    <description>This record type should be used when linking Speakers with their Lectures</description>
    <fullName>Speaker_Lecture</fullName>
    <label>Speaker Lecture</label>
  </recordTypes>
  <sharingModel>Read</sharingModel>
</CustomObject>